利用規約改訂&ソースコード公開

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1>UX TTS プライバシーポリシー</h1>
-    <p><strong>最終更新日:</strong> 2025年10月25日</p>
+    <p><strong>最終更新日:</strong> 2025年12月9日</p>
 
     <h2>1. はじめに</h2>
     <p>このプライバシーポリシーは、UX Labs（代表: HariBote1110、以下「当組織」といいます）が提供するDiscord Bot「UX TTS」（以下、「本Bot」といいます）における、利用者に関する情報の取り扱いについて説明するものです。本Botをご利用いただく際には、このプライバシーポリシーの内容をご理解いただくようお願いいたします。</p>
@@ -22,45 +22,47 @@
     <ul>
         <li><strong>(a) Discordから提供される情報:</strong>
             <ul>
-                <li><strong>ユーザーID、サーバーID、チャンネルID:</strong> Botの機能提供（読み上げ対象チャンネルの特定、ユーザー別設定の保存、ライセンス適用の管理など）のために利用します。</li>
-                <li><strong>ユーザーが送信したメッセージ内容:</strong> テキスト読み上げ機能を提供するために、一時的にメッセージ内容を取得し、音声合成エンジン（VOICEVOX API、Open JTalk API）に送信します。<strong>メッセージ内容自体をBotが長期的に保存することはありません</strong>が、下記(c)の音声キャッシュとして音声データが保存される場合があります。</li>
+                <li><strong>ユーザーID、サーバーID、チャンネルID、カテゴリID:</strong> Botの機能提供（読み上げ対象チャンネルの特定、ユーザー別設定の保存、AutoVC機能によるチャンネル作成/削除、管理パネルの表示など）のために利用します。</li>
+                <li>ユーザーが送信したメッセージ内容（VC内チャットを含む）: テキスト読み上げ機能を提供するために、一時的にメッセージ内容を取得し、音声合成エンジン（VOICEVOX API、Open JTalk API）に送信します。</li>
             </ul>
         </li>
         <li><strong>(b) 利用者が設定する情報:</strong>
             <ul>
-                <li><strong>ユーザー別設定（話者ID、速度、ピッチ）:</strong> 各ユーザーが設定した読み上げスタイルを記憶し、適用するために、ユーザーIDおよびサーバーIDに関連付けてデータベースに保存します。</li>
+                <li>ユーザー別設定（話者ID、速度、ピッチ、個人追従設定など）: 各ユーザーが設定した読み上げスタイルや個人向け機能を記憶し、適用するために、ユーザーIDおよびサーバーIDに関連付けてデータベースに保存します。</li>
+                <li>サーバー別設定（AutoVC設定、入退室読み上げ設定など）: サーバー全体での機能有効化や動作設定を適用するために、サーバーIDに関連付けてデータベースに保存します。</li>
             </ul>
         </li>
         <li><strong>(c) 音声キャッシュに関する情報:</strong>
             <ul>
-                <li><strong>合成された音声データ:</strong> 応答速度の向上および外部API（VOICEVOX）の負荷軽減のため、一度合成された音声データをBotが動作するサーバー上に一時的に保存します。</li>
-                <li><strong>キャッシュメタデータ:</strong> 音声データに対応する情報として、元のテキスト（のハッシュ値）、話者ID、速度、ピッチ、音声データへの参照情報、ファイルサイズ、最終アクセス日時、アクセス回数をデータベースに記録します。これは、キャッシュの再利用および管理（下記3参照）のために利用します。</li>
+                <li>合成された音声データ: 応答速度の向上および外部API（VOICEVOX）の負荷軽減のため、一度合成された音声データをBotが動作するサーバー上に一時的に保存します。</li>
+                <li>キャッシュメタデータ: 音声データに対応する情報として、元のテキスト（のハッシュ値）、話者ID、速度、ピッチ、音声データへの参照情報、ファイルサイズ、最終アクセス日時、アクセス回数をデータベースに記録します。これは、キャッシュの再利用および管理（下記3参照）のために利用します。</li>
             </ul>
         </li>
         <li><strong>(d) サーバー利用状況に関する情報:</strong>
             <ul>
-                <li><strong>サーバーIDごとの読み上げ文字数、最終リセット月:</strong> 読み上げ文字数の上限管理およびライセンス状態の判定のために、サーバーIDに関連付けてデータベースに保存します。</li>
-            </ul>
-        </li>
-        <li><strong>(e) ライセンスに関する情報:</strong>
-            <ul>
-                <li><strong>ライセンスキー、最大/現在アクティベーション回数、ステータス:</strong> 提供されたライセンスキーの有効性を管理するためにデータベースに保存します。</li>
-                <li><strong>アクティベーション情報（ライセンスキー、サーバーID、日時）:</strong> どのサーバーがどのライセンスキーを有効化しているかを管理するためにデータベースに保存します。</li>
+                <li>サーバーIDごとの読み上げ文字数、最終リセット月: 読み上げ文字数の上限管理のために、サーバーIDに関連付けてデータベースに保存します。</li>
             </ul>
         </li>
     </ul>
 
-    <h2>3. 音声キャッシュの詳細</h2>
+    <h2>3. VCチャットのアーカイブとWebhookの利用</h2>
+    <p>本BotのAutoVC機能が有効なチャンネルでは、以下の通りVC内チャットのアーカイブが行われます。</p>
+    <ul>
+        <li>アーカイブ対象: 自動作成されたボイスチャンネル（個室）のVC内チャットに投稿された全メッセージ（Botのメッセージを除く）が対象となります。</li>
+        <li>アーカイブのトリガー: ボイスチャンネルから利用者が全員退出した時点で、Botが自動的にチャットログを収集します。</li>
+        <li>アーカイブ方法（Webhook利用）: Botは、設定されたアーカイブ先テキストチャンネルにWebhookを作成し、元の発言者の名前とアイコンを使用してメッセージを再投稿することでログを保存します。これにより、元のチャットの臨場感を保ちます。</li>
+        <li>アーカイブデータの特性: アーカイブが完了した後、アーカイブされたスレッドはロックされ、ログデータ自体はBotが動作するサーバー上ではなく、Discordのサーバー上に保存され、当組織はアーカイブ先のスレッドがロックされた後もそのメッセージ内容を保持・閲覧する権限を持ちません。</li>
+    </ul>
+
+    <h2>4. 音声キャッシュの詳細</h2>
     <p>本Botは、パフォーマンス向上のため音声キャッシュシステムを利用しています。</p>
     <ul>
-        <li><strong>キャッシュ対象:</strong> VOICEVOX APIを利用して合成された音声データが対象です。Open JTalkで合成された音声はキャッシュされません（現在の実装に基づく）。</li>
-        <li><strong>キャッシュの仕組み:</strong> 同じテキスト内容、同じ話者ID、同じ速度、同じピッチで再度読み上げリクエストがあった場合、新たに音声合成を行う代わりに、保存されている音声データ（キャッシュ）を再利用します。</li>
-        <li><strong>共有キャッシュ:</strong> このキャッシュはサーバーやユーザーを区別せず共有されます。異なるユーザーやサーバーからのリクエストであっても、テキストと設定が完全に一致すれば、同じキャッシュデータが利用される可能性があります。キャッシュデータ自体には、どのユーザーのリクエストで生成されたかの情報は含まれません。</li>
-        <li><strong>保存場所:</strong> 合成された音声データおよび関連メタデータは、Botが動作しているサーバー上に保存されます。</li>
-        <li><strong>保存期間と削除:</strong> キャッシュデータは、明確な保存期限は定められていません。ただし、キャッシュ全体の合計サイズが設定された上限を超えた場合、<strong>最後にアクセスされた日時が古く、かつアクセス回数が少ないデータ</strong>から順に自動的に削除されます。</li>
+        <li>キャッシュ対象: VOICEVOX APIを利用して合成された音声データが対象です。</li>
+        <li>共有キャッシュ: このキャッシュはサーバーやユーザーを区別せず共有されます。異なるユーザーやサーバーからのリクエストであっても、テキストと設定が完全に一致すれば、同じキャッシュデータが利用される可能性があります。</li>
+        <li>保存場所と削除: 合成された音声データおよび関連メタデータは、Botが動作しているサーバー上に保存されます。キャッシュは、サイズ上限を超えた場合、最後にアクセスされた日時が古いデータから順に自動的に削除されます。</li>
     </ul>
 
-    <h2>4. 情報の第三者提供</h2>
+    <h2>5. 情報の第三者提供</h2>
     <p>当組織は、以下の場合を除き、収集した情報を第三者に提供することはありません。</p>
     <ul>
         <li>法令に基づく場合。</li>
@@ -70,17 +72,17 @@
         <li>音声合成のために、メッセージ内容および設定（話者ID、速度、ピッチ）を外部API（VOICEVOX API、Open JTalk API）に送信する場合。これらのAPIのプライバシーポリシーについては、各サービスの提供元にご確認ください。</li>
     </ul>
 
-    <h2>5. 情報の管理</h2>
+    <h2>6. 情報の管理</h2>
     <p>収集した情報は、不正アクセス、紛失、破壊、改ざん、漏洩等を防ぐために、適切なセキュリティ対策を講じ、厳重に管理します。音声データ等が保存されるサーバーへのアクセスは、運用者のみに制限されます。</p>
 
-    <h2>6. 利用者の権利</h2>
-    <p>利用者は、当組織が保有する自身の情報について、開示、訂正、追加、削除、利用停止等を請求することができます。ご希望の場合は、下記7. の連絡先までご連絡ください。ご本人様であることを確認させていただいた上で、法令に基づき適切に対応いたします。（ただし、音声キャッシュの内容と特定のユーザーリクエストを結びつけて開示・削除することはシステム上困難な場合があります。）</p>
+    <h2>7. 利用者の権利</h2>
+    <p>利用者は、当組織が保有する自身の情報について、開示、訂正、追加、削除、利用停止等を請求することができます。ご希望の場合は、下記8. の連絡先までご連絡ください。ご本人様であることを確認させていただいた上で、法令に基づき適切に対応いたします。（ただし、音声キャッシュの内容と特定のユーザーリクエストを結びつけて開示・削除することはシステム上困難な場合があります。）</p>
 
-    <h2>7. お問い合わせ先</h2>
+    <h2>8. お問い合わせ先</h2>
     <p>本プライバシーポリシーに関するお問い合わせは、UX Labs (担当部門: UX Tech.) まで、以下のDiscordサーバーを通じてご連絡ください。</p>
     <p><a href="https://discord.gg/a2nZjqc8uB">UX Labs Discordサーバー</a></p>
 
-    <h2>8. プライバシーポリシーの変更</h2>
+    <h2>9. プライバシーポリシーの変更</h2>
     <p>当組織は、法令の変更やサービスの改善等に伴い、本プライバシーポリシーを改定することがあります。重要な変更がある場合は、本Botのステータスメッセージや上記のDiscordサーバーにてお知らせいたします。変更後のプライバシーポリシーは、掲載された時点から効力を生じるものとします。</p>
 
 </body>
