--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1>UX TTS 利用規約</h1>
-    <p><strong>最終更新日:</strong> 2025年10月25日</p>
+    <p><strong>最終更新日:</strong> 2025年12月9日</p>
 
     <p>この利用規約（以下、「本規約」といいます）は、UX Labs（以下、「当組織」といいます）が提供するDiscord Bot「UX TTS」（以下、「本Bot」といいます）の利用条件を定めるものです。本Botを利用するユーザー（以下、「利用者」といいます）は、本規約に同意したものとみなします。</p>
 
@@ -23,21 +23,10 @@
     <ol>
         <li>利用者は、本規約およびDiscordの利用規約を遵守し、本Botを利用するものとします。</li>
         <li>本BotをDiscordサーバーに導入する利用者は、当該サーバーの管理者権限を有するか、または管理者から適切な許可を得ているものとします。</li>
-        <li>本Botの利用は、原則として無料とします。ただし、将来的に一部機能を有料化する場合があります。</li>
+        <li>本Botは、ソースコードがGNU General Public License (GPL) v3に基づいて公開されているオープンソースソフトウェアです。利用者は、本Botの利用により生じる一切のリスクを理解し、自己の責任において利用するものとします。</li>
     </ol>
 
-    <h2>第3条 (ライセンスキー)</h2>
-    <ol>
-        <li>当組織は、特定の機能（読み上げ文字数制限の解除など）を利用するためのライセンスキーを発行する場合があります。</li>
-        <li>ライセンスキーは、指定された方法で購入または取得するものとします。</li>
-        <li>利用者は、<code>/activate_license</code> コマンドを使用し、自身が管理者権限を持つDiscordサーバーに対してライセンスキーを適用（アクティベート）することができます。</li>
-        <li>各ライセンスキーには、アクティベート可能な回数に上限が設定されています (`max_activations`)。上限に達したキーは、新たなサーバーに適用することはできません。</li>
-        <li>利用者は、<code>/deactivate_license</code> コマンドを使用し、自身が管理者権限を持つサーバーからライセンスキーの適用を解除（ディアクティベート）することができます。ディアクティベートを行っても、ライセンスキーのアクティベーション<strong>使用回数は減少しません</strong>。これは、サーバー移行時の利用を想定しており、キーの不正な使い回しを防ぐためです。</li>
-        <li>ライセンスキーは、購入または取得した利用者本人（またはその利用者が所属する組織）のみが利用できるものとし、第三者への譲渡、貸与、再販等を禁止します。</li>
-        <li>当組織は、不正利用が疑われる場合や、本規約違反があった場合、ライセンスキーを無効化する権利を有します。</li>
-    </ol>
-
-    <h2>第4条 (禁止事項)</h2>
+    <h2>第3条 (禁止事項)</h2>
     <p>利用者は、本Botの利用にあたり、以下の行為をしてはなりません。</p>
     <ul>
         <li>法令または公序良俗に違反する行為。</li>
@@ -51,7 +40,7 @@
         <li>その他、当組織が不適切と判断する行為。</li>
     </ul>
 
-    <h2>第5条 (本Botの提供の停止等)</h2>
+    <h2>第4条 (本Botの提供の停止等)</h2>
     <ol>
         <li>当組織は、以下のいずれかの事由があると判断した場合、利用者に事前に通知することなく本Botの全部または一部の提供を停止または中断することができるものとします。
             <ul>
@@ -65,17 +54,17 @@
         <li>当組織は、本Botの提供の停止または中断により、利用者または第三者が被ったいかなる不利益または損害についても、一切の責任を負わないものとします。</li>
     </ol>
 
-    <h2>第6条 (免責事項)</h2>
+    <h2>第5条 (免責事項)</h2>
     <ol>
         <li>当組織は、本Botに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。</li>
         <li>当組織は、本Botに起因して利用者に生じたあらゆる損害について一切の責任を負いません。ただし、本規約が消費者契約法に定める消費者契約となる場合、この免責規定は適用されません。</li>
         <li>前項ただし書に定める場合であっても、当組織は、当組織の過失（重過失を除きます。）による債務不履行または不法行為により利用者に生じた損害のうち特別な事情から生じた損害（当組織または利用者が損害発生につき予見し、または予見し得た場合を含みます。）について一切の責任を負いません。</li>
     </ol>
 
-    <h2>第7条 (利用規約の変更)</h2>
+    <h2>第6条 (利用規約の変更)</h2>
     <p>当組織は、必要と判断した場合には、利用者に通知することなくいつでも本規約を変更することができるものとします。変更後の利用規約は、本BotのステータスメッセージやUX Labs Discordサーバー (<a href="https://discord.gg/a2nZjqc8uB">https://discord.gg/a2nZjqc8uB</a>) に掲載したときから効力を生じるものとします。</p>
 
-    <h2>第8条 (準拠法・裁判管轄)</h2>
+    <h2>第7条 (準拠法・裁判管轄)</h2>
     <ol>
         <li>本規約の解釈にあたっては、日本法を準拠法とします。</li>
         <li>本Botに関して紛争が生じた場合には、東京地方裁判所を専属的合意管轄とします。</li>
