--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -7,12 +7,13 @@
     <style>
         body { font-family: sans-serif; line-height: 1.6; margin: 2em; }
         h1, h2 { border-bottom: 1px solid #ccc; padding-bottom: 0.3em; }
+        ul { margin-bottom: 1em; }
     </style>
 </head>
 <body>
 
     <h1>UX TTS プライバシーポリシー</h1>
-    <p><strong>最終更新日:</strong> 2025年12月9日</p>
+    <p><strong>最終更新日:</strong> 2025年12月25日</p>
 
     <h2>1. はじめに</h2>
     <p>このプライバシーポリシーは、UX Labs（代表: HariBote1110、以下「当組織」といいます）が提供するDiscord Bot「UX TTS」（以下、「本Bot」といいます）における、利用者に関する情報の取り扱いについて説明するものです。本Botをご利用いただく際には、このプライバシーポリシーの内容をご理解いただくようお願いいたします。</p>
@@ -23,24 +24,35 @@
         <li><strong>(a) Discordから提供される情報:</strong>
             <ul>
                 <li><strong>ユーザーID、サーバーID、チャンネルID、カテゴリID:</strong> Botの機能提供（読み上げ対象チャンネルの特定、ユーザー別設定の保存、AutoVC機能によるチャンネル作成/削除、管理パネルの表示など）のために利用します。</li>
-                <li>ユーザーが送信したメッセージ内容（VC内チャットを含む）: テキスト読み上げ機能を提供するために、一時的にメッセージ内容を取得し、音声合成エンジン（VOICEVOX API、Open JTalk API）に送信します。</li>
+                <li>ユーザーが送信したメッセージ内容（VC内チャットを含む）: テキスト読み上げ機能を提供するために、一時的にメッセージ内容を取得し、音声合成エンジン（VOICEVOX、Open JTalk等）に送信します。</li>
             </ul>
         </li>
         <li><strong>(b) 利用者が設定する情報:</strong>
             <ul>
-                <li>ユーザー別設定（話者ID、速度、ピッチ、個人追従設定など）: 各ユーザーが設定した読み上げスタイルや個人向け機能を記憶し、適用するために、ユーザーIDおよびサーバーIDに関連付けてデータベースに保存します。</li>
+                <li><strong>設定データ（話者、辞書等）:</strong> 各ユーザーが設定した読み上げスタイル（話者ID、速度、ピッチ）、個人追従設定、および<strong>ユーザーが登録した単語辞書データ（単語と読みのペア）</strong>を記憶し適用するために、ユーザーIDおよびサーバーIDに関連付けてデータベースに保存します。</li>
                 <li>サーバー別設定（AutoVC設定、入退室読み上げ設定など）: サーバー全体での機能有効化や動作設定を適用するために、サーバーIDに関連付けてデータベースに保存します。</li>
             </ul>
         </li>
-        <li><strong>(c) 音声キャッシュに関する情報:</strong>
+        <li><strong>(c) Webダッシュボード利用に関する情報:</strong>
             <ul>
-                <li>合成された音声データ: 応答速度の向上および外部API（VOICEVOX）の負荷軽減のため、一度合成された音声データをBotが動作するサーバー上に一時的に保存します。</li>
-                <li>キャッシュメタデータ: 音声データに対応する情報として、元のテキスト（のハッシュ値）、話者ID、速度、ピッチ、音声データへの参照情報、ファイルサイズ、最終アクセス日時、アクセス回数をデータベースに記録します。これは、キャッシュの再利用および管理（下記3参照）のために利用します。</li>
+                <li><strong>認証情報:</strong> Webダッシュボードへのログイン時、Discord OAuth2を利用してユーザー情報（ユーザー名、ID、アバター等）を取得し、本人確認のために利用します。</li>
+                <li><strong>Cookie（クッキー）:</strong> Webダッシュボードにおけるログイン状態の維持（セッション管理）のために、Cookieを使用します。</li>
             </ul>
         </li>
-        <li><strong>(d) サーバー利用状況に関する情報:</strong>
+        <li><strong>(d) 音声キャッシュに関する情報:</strong>
+            <ul>
+                <li>合成された音声データ: 応答速度の向上および合成エンジンの負荷軽減のため、一度合成された音声データをBotが動作するサーバー上に一時的に保存します。</li>
+                <li>キャッシュメタデータ: 音声データに対応する情報として、元のテキスト（のハッシュ値）、話者ID、速度、ピッチ、音声データへの参照情報、ファイルサイズ、最終アクセス日時、アクセス回数をデータベースに記録します。これは、キャッシュの再利用および管理のために利用します。</li>
+            </ul>
+        </li>
+        <li><strong>(e) サーバー利用状況に関する情報:</strong>
             <ul>
                 <li>サーバーIDごとの読み上げ文字数、最終リセット月: 読み上げ文字数の上限管理のために、サーバーIDに関連付けてデータベースに保存します。</li>
+            </ul>
+        </li>
+        <li><strong>(f) サービス改善のための情報:</strong>
+            <ul>
+                <li><strong>統計データ・ログ:</strong> サービスの品質向上およびトラブルシューティングのため、システムの稼働状況、応答速度（レイテンシ）、およびエラーログ等を収集します。これらは個人を特定できない統計データとして扱われる場合があります。</li>
             </ul>
         </li>
     </ul>
@@ -57,7 +69,7 @@
     <h2>4. 音声キャッシュの詳細</h2>
     <p>本Botは、パフォーマンス向上のため音声キャッシュシステムを利用しています。</p>
     <ul>
-        <li>キャッシュ対象: VOICEVOX APIを利用して合成された音声データが対象です。</li>
+        <li>キャッシュ対象: VOICEVOX等のエンジンを利用して合成された音声データが対象です。</li>
         <li>共有キャッシュ: このキャッシュはサーバーやユーザーを区別せず共有されます。異なるユーザーやサーバーからのリクエストであっても、テキストと設定が完全に一致すれば、同じキャッシュデータが利用される可能性があります。</li>
         <li>保存場所と削除: 合成された音声データおよび関連メタデータは、Botが動作しているサーバー上に保存されます。キャッシュは、サイズ上限を超えた場合、最後にアクセスされた日時が古いデータから順に自動的に削除されます。</li>
     </ul>
@@ -69,7 +81,7 @@
         <li>人の生命、身体または財産の保護のために必要がある場合であって、本人の同意を得ることが困難であるとき。</li>
         <li>公衆衛生の向上または児童の健全な育成の推進のために特に必要がある場合であって、本人の同意を得ることが困難であるとき。</li>
         <li>国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって、本人の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき。</li>
-        <li>音声合成のために、メッセージ内容および設定（話者ID、速度、ピッチ）を外部API（VOICEVOX API、Open JTalk API）に送信する場合。これらのAPIのプライバシーポリシーについては、各サービスの提供元にご確認ください。</li>
+        <li>音声合成のために、メッセージ内容および設定（話者ID、速度、ピッチ）を音声合成エンジン（VOICEVOX、Open JTalk等）に送信する場合。（ただし、当組織が管理するサーバー内で音声合成処理が完結する場合、外部へのデータ送信は行われません。）</li>
     </ul>
 
     <h2>6. 情報の管理</h2>
